[CE] ATLAS UI - fix for tags not showing ... on some resolutions, note tags cannot have long names

--- a/foundations_ui/src/scss/views/input-metric.scss
+++ b/foundations_ui/src/scss/views/input-metric.scss
@@ -41,6 +41,10 @@
     .job-column-header, .job-cell {
       width: calc(100% / 6 - 42px / 5);
     }
+
+    .job-column-header:last-of-type(), .job-cell:last-of-type() {
+      width: calc(100% / 6 - 42px / 5 + 30px);
+    }
   }
 }
 
